--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
             <a id="login" href="https://accounts.google.com/v3/signin/identifier?dsh=S420064293%3A1671407915251901&continue=https%3A%2F%2Fwww.google.com%2F&ec=GAZAmgQ&hl=pt-BR&passive=true&flowName=GlifWebSignIn&flowEntry=ServiceLogin&ifkv=AeAAQh4FM_CXhzvM2r9bhZHRwaEGWbdETCcK1EYEolWBYRSPcOK_UEG66X9qwfTq9MEpD97YAm5p">Fazer login</a>
         </header>
 
-     <section>
+     <section class="google">
         <img src="imagens/google.jpg" alt="Google">
      </section>
 
-     <section>
+     <section class="pesquisa">
         <input type="search" name="Busca" id="search">
      </section>
 
      <section class="button">
-        <a href="">Pesquisa google</a>
-
-        <a href="">Estou com sorte</a>
+        <div class="button-2">
+            <a href="">Pesquisa google</a>
+            <a href="">Estou com sorte</a>
+        </div>
      </section>
 
     <footer>
         <div>
             <p class="brasil">Brasil</p>
         </div>
+        <hr>
 
         <div class="sobre">
                 <ul>
