--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="PT-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,28 +10,34 @@
     <link rel="stylesheet" href="estilos/paisagem.css" media="=screen and (orientation: landscape)">
     <title>Google</title>
 </head>
+
 <body>
-   
-        <header>
-            <a href="https://www.google.com/intl/pt/gmail/about/">Gmail</a>
-            <a href="https://www.google.com.br/imghp?hl=pt-BR&ogbl">Imagens</a>
-            <a id="login" href="https://accounts.google.com/v3/signin/identifier?dsh=S420064293%3A1671407915251901&continue=https%3A%2F%2Fwww.google.com%2F&ec=GAZAmgQ&hl=pt-BR&passive=true&flowName=GlifWebSignIn&flowEntry=ServiceLogin&ifkv=AeAAQh4FM_CXhzvM2r9bhZHRwaEGWbdETCcK1EYEolWBYRSPcOK_UEG66X9qwfTq9MEpD97YAm5p">Fazer login</a>
-        </header>
+    <header>
+        <a href="https://www.google.com/intl/pt/gmail/about/">Gmail</a>
+        <a href="https://www.google.com.br/imghp?hl=pt-BR&ogbl">Imagens</a>
+        <div class="app"><a href=""><img src="Icons/app.png" alt=""></a></div>
+        <a id="login"
+            href="https://accounts.google.com/v3/signin/identifier?dsh=S420064293%3A1671407915251901&continue=https%3A%2F%2Fwww.google.com%2F&ec=GAZAmgQ&hl=pt-BR&passive=true&flowName=GlifWebSignIn&flowEntry=ServiceLogin&ifkv=AeAAQh4FM_CXhzvM2r9bhZHRwaEGWbdETCcK1EYEolWBYRSPcOK_UEG66X9qwfTq9MEpD97YAm5p">Fazer
+            login</a>
+    </header>
 
-     <section class="google">
+    <section class="google">
         <img src="imagens/google.jpg" alt="Google">
-     </section>
+    </section>
 
-     <section class="pesquisa">
+    <section class="pesquisa">
         <input type="search" name="Busca" id="search">
-     </section>
+    </section>
 
-     <section class="button">
-        <div class="button-2">
-            <a href="">Pesquisa google</a>
-            <a href="">Estou com sorte</a>
-        </div>
-     </section>
+    <div class="button">
+        <button class="btn">
+            Pesquisa Google
+        </button>
+
+        <button class="btn">
+            Estou com sorte
+        </button>
+    </div>
 
     <footer>
         <div>
@@ -39,21 +46,34 @@
         <hr>
 
         <div class="sobre">
-                <ul>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Publicidade</a></li>
-                    <li><a href="">Negocios</a></li>
-                    <li><a href="">Como funciona a pesquisa</a></li>
-                    <div class="right">
+            <ul>
+                <li><a href="">Sobre</a></li>
+                <li><a href="">Publicidade</a></li>
+                <li><a href="">Negocios</a></li>
+                <li><a href="">Como funciona a pesquisa</a></li>
+                <div class="right">
                     <li><a href="">Privacidade</a></li>
                     <li><a href="">Termos</a></li>
                     <li><a href="">Configurações</a></li>
-                    </div>
-                    
-                </ul>
-            </div>
+                </div>
 
-        </footer>
+            </ul>
+        </div>
+
+        <div class="fundo-celular">
+            <ul>
+                <li>Tema escuro</li>
+                <li>Configurações</li>
+                <li>Privacidade</li>
+                <li>Termos</li>
+                <li>Publicidade</li>
+                <li>Négocios</li>
+                <li>Sobre</li>
+            </ul>
+        </div>
+
+    </footer>
 
 </body>
+
 </html>
