--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/portrait.css" media="screen and (orientation: portrait)">
-    <link rel="stylesheet" href="estilos/paisagem.css" media="=screen and (orientation: landscape)">
     <title>Google</title>
 </head>
 
@@ -15,7 +13,11 @@
     <header>
         <a href="https://www.google.com/intl/pt/gmail/about/">Gmail</a>
         <a href="https://www.google.com.br/imghp?hl=pt-BR&ogbl">Imagens</a>
-        <div class="app"><a href=""><img src="Icons/app.png" alt=""></a></div>
+
+        <div class="app">
+            <a href=""><img src="Icons/app.png" alt=""></a>
+        </div>
+
         <a id="login"
             href="https://accounts.google.com/v3/signin/identifier?dsh=S420064293%3A1671407915251901&continue=https%3A%2F%2Fwww.google.com%2F&ec=GAZAmgQ&hl=pt-BR&passive=true&flowName=GlifWebSignIn&flowEntry=ServiceLogin&ifkv=AeAAQh4FM_CXhzvM2r9bhZHRwaEGWbdETCcK1EYEolWBYRSPcOK_UEG66X9qwfTq9MEpD97YAm5p">Fazer
             login</a>
@@ -39,39 +41,19 @@
         </button>
     </div>
 
+    
     <footer>
-        <div>
-            <p class="brasil">Brasil</p>
+        <div class="footer-links">
+            <a href="#">Brasil</a>
+            <a href="#">Privacidade</a>
+            <a href="#">Termos</a>
+            <a href="#">Configurações</a>
         </div>
-        <hr>
-
-        <div class="sobre">
-            <ul>
-                <li><a href="">Sobre</a></li>
-                <li><a href="">Publicidade</a></li>
-                <li><a href="">Negocios</a></li>
-                <li><a href="">Como funciona a pesquisa</a></li>
-                <div class="right">
-                    <li><a href="">Privacidade</a></li>
-                    <li><a href="">Termos</a></li>
-                    <li><a href="">Configurações</a></li>
-                </div>
-
-            </ul>
+        <div class="footer-links">
+            <a href="#">Publicidade</a>
+            <a href="#">Negócios</a>
+            <a href="#">Como funciona a pesquisa</a>
         </div>
-
-        <div class="fundo-celular">
-            <ul>
-                <li>Tema escuro</li>
-                <li>Configurações</li>
-                <li>Privacidade</li>
-                <li>Termos</li>
-                <li>Publicidade</li>
-                <li>Négocios</li>
-                <li>Sobre</li>
-            </ul>
-        </div>
-
     </footer>
 
 </body>
